# Gen-AI-literature-review-

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PUBLICATION_METHODS_DRAFT.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md
prompts/: abstract_structuring_prompt.txt
scripts/: recover_failures.py  run_gui.py  run_pipeline.py
src/lit_review_pipeline/: __init__.py  __main__.py  config.py  constants.py  doi_resolver.py  gui.py  ingestion.py  llm_extractor.py  logging_utils.py  pipeline.py  preprocess.py  recovery.py
src/lit_review_pipeline/clients/: __init__.py  base.py  gemini_client.py  openai_client.py
tests/: test_preprocess.py
